@@ -491,7 +491,8 @@ static int handle_connect(daemon_state s)
 
 	client.socket_fd = accept(s.socket_fd, (struct sockaddr *) &sockaddr, &sl);
 	if (client.socket_fd < 0) {
-		ERROR(&s, "Failed to accept connection errno %d.", errno);
+		if (errno != EAGAIN || !_shutdown_requested)
+			ERROR(&s, "Failed to accept connection: %s.", strerror(errno));
 		return 0;
 	}
 
@@ -512,8 +513,8 @@ static int handle_connect(daemon_state s)
 	ts->s = s;
 	ts->client = client;
 
-	if (pthread_create(&ts->client.thread_id, NULL, _client_thread, ts)) {
-		ERROR(&s, "Failed to create client thread errno %d.", errno);
+	if ((errno = pthread_create(&ts->client.thread_id, NULL, _client_thread, ts))) {
+		ERROR(&s, "Failed to create client thread: %s.", strerror(errno));
 		return 0;
 	}
 
